...
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_list_gejala_dipilih" />

        <TextView
            android:id="@+id/tv_nama_penyakit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_list_gejala_dipilih"
            app:layout_constraintTop_toBottomOf="@id/tv_anak_anda" />

        <TextView
            android:id="@+id/tv_persentase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
...
