<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="18dp">

    <TextView
        android:id="@+id/kode_penyakit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/nama_penyakit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="18sp"/>

</LinearLayout>